--- a/Structure/index.html
+++ b/Structure/index.html
@@ -8,11 +8,18 @@
     <link rel="icon" type="image/png" href="SRSfavicon.png">
 </head>
 <body>
+	<!-- // <span id="follower"></span>    -->
 <header>
-	<h1><img src="SRS.png" id="logo"></h1>
+	<h1> <span id="bubble1" class="hidden_rep"></span>
+		<span id="bubble2" class="hidden_rep"></span>
+		<span id="bubble3" class="hidden_rep"></span>
+
+	<img src="SRS.png" id="logo" class="hidden"> 
+   </h1>
 	<nav>
 	
 		<div id="cont1">
+            
 			<a class="link" href="">Designs</a>
 			<img src="Window_closed1.png" height="80%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
@@ -31,11 +38,18 @@
     </nav>
 </header>
 <section id="About">
-	
+	<span class="follower"></span>
+	<div id="ctn-abt">
+		<div id="abt">
+			<h2>ABOUT US</h2>
+		</div>
+	</div>
 </section>
 
 
 
-<script type="text/javascript" src="Java.js"></script>	
+
+		
 </body>
+<script defer src="script.js" type="text/javascript"></script>
 </html>
