--- a/Structure/index.html
+++ b/Structure/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
 	<!-- // <span id="follower"></span>    -->
-<header>
-	<h1> <span id="bubble1" class="hidden_rep"></span>
-		<span id="bubble2" class="hidden_rep"></span>
-		<span id="bubble3" class="hidden_rep"></span>
 
+<header>
+
+	<h1>
+<span id="bubble1" class="hidden_rep"></span>
+		
+		<span id="bubble3" class="hidden_rep"></span>
 	<img src="SRS.png" id="logo" class="hidden"> 
    </h1>
 	<nav>
-	
+	<span id="bubble2" class="hidden_rep"></span>
 		<div id="cont1">
             
 			<a class="link" href="">Designs</a>
@@ -38,11 +40,13 @@
     </nav>
 </header>
 <section id="About">
-	<span class="follower"></span>
 	<div id="ctn-abt">
-		<div id="abt">
+        <div id="abt">
 			<h2>ABOUT US</h2>
 		</div>
+		<div id="projects"></div>
+		<div id="Chairperson"></div>
+		<div id=""></div>
 	</div>
 </section>
 
