--- a/Structure/index.html
+++ b/Structure/index.html
@@ -13,29 +13,33 @@
 <header>
 
 	<h1>
-<span id="bubble1" class="hidden_rep"></span>
-		
-		<span id="bubble3" class="hidden_rep"></span>
-	<img src="SRS.png" id="logo" class="hidden"> 
+<img src="SRS.png" id="logo" class="hidden"> 
    </h1>
 	<nav>
-	<span id="bubble2" class="hidden_rep"></span>
-		<div id="cont1">
-            
-			<a class="link" href="">Designs</a>
-			<img src="Window_closed1.png" height="80%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		<div id="cont1" class="hidden">
+ 
+			<a class="link" href="">Home</a>
+			<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		
+	</div>
+	
+		<div id="cont2" class="hidden">
+            <a class="link" href="">About</a>
+			<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
+			
 		</div>
-	    <div id="cont2">
-	    	<a class="link" href="#About">About</a>
-	    	<img src="Window_closed1.png" height="80%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+	    <div id="cont3" class="hidden">
+	    	<a class="link" href="#About">Designs</a>
+	    	<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 	    </div>
-		<div id="cont3">
-			<a class="link"  href="">Contact</a>
-		   <img src="Window_closed1.png" height="80%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		<div id="cont4" class="hidden">
+			<a class="link"  href="" >Contact</a>
+		   <img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 		</div>
+		
 	
     </nav>
 </header>
