--- a/Structure/index.html
+++ b/Structure/index.html
@@ -13,30 +13,28 @@
 <header>
 
 	<h1>
-<img src="SRS.png" id="logo" class="hidden"> 
+<img src="SRS.png" id="logo" class="hidden" height="60%"><img src="houseicon.png" class="hidden" id="houseicon" height="65%"> 
    </h1>
 	<nav>
-		<div id="cont1" class="hidden">
- 
-			<a class="link" href="">Home</a>
-			<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
-		
-	</div>
+		<div id="cont1">
+        <a class="link hidden_top" href="">Home</a>
+		<img src="Window_closed1.png" height="69%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		</div>
 	
-		<div id="cont2" class="hidden">
-            <a class="link" href="">About</a>
-			<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		<div id="cont2">
+            <a class="link hidden_top" href="">About</a>
+			<img src="Window_closed1.png" height="69%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 			
 		</div>
-	    <div id="cont3" class="hidden">
-	    	<a class="link" href="#About">Designs</a>
-	    	<img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+	    <div id="cont3">
+	    	<a class="link hidden_top" href="#About">Designs</a>
+	    	<img src="Window_closed1.png" height="69%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 	    </div>
-		<div id="cont4" class="hidden">
-			<a class="link"  href="" >Contact</a>
-		   <img src="Window_closed1.png" height="70%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
+		<div id="cont4">
+			<a class="link hidden_top"  href="" >Contact</a>
+		   <img src="Window_closed1.png" height="69%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 		</div>
 		
@@ -59,5 +57,5 @@
 
 		
 </body>
-<script defer src="script.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript" defer></script>
 </html>
