--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <img src="SRS.png" id="logo" class="hidden" height="60%"><img src="houseicon.png" class="hidden" id="houseicon" height="65%"> 
    </h1>
 	<nav>
-		<div id="cont1">
+		<div id="cont1" class="cont">
         <a class="link hidden_top" href="">Home</a>
 		<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 		</div>
 	
-		<div id="cont2">
-            <a class="link hidden_top" href="">About</a>
+		<div id="cont2" class="cont">
+            <a class="link hidden_top" href="#About">About</a>
 			<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 			
 		</div>
-	    <div id="cont3">
-	    	<a class="link hidden_top" href="#About">Designs</a>
+	    <div id="cont3" class="cont">
+	    	<a class="link hidden_top" href="">Designs</a>
 	    	<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 	    </div>
-		<div id="cont4">
+		<div id="cont4" class="cont">
 			<a class="link hidden_top"  href="" >Contact</a>
 		   <img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
@@ -41,18 +41,24 @@
 	
     </nav>
 </header>
+<section id="Home">
+	<h2 class="h2sec">Vision</h2>
+
+
+</section>
 <section id="About">
-	<div id="ctn-abt">
+	<h2 class="h2sec"> About Us</h2>
+	<div> 
+</section> 
+
+<!-- <div id="ctn-abt"> A
         <div id="abt">
 			<h2>ABOUT US</h2>
 		</div>
 		<div id="projects"></div>
 		<div id="Chairperson"></div>
 		<div id=""></div>
-	</div>
-</section>
-
-
+	</div> -->
 
 
 		
