--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 
 	<h1>
-<img src="SRS.png" id="logo" class="hidden" height="60%"><img src="houseicon.png" class="hidden" id="houseicon" height="65%"> 
+<img src="SRS.png" id="logo" class="hidden" height="70%"> 
    </h1>
 	<nav>
 		<div id="cont1" class="cont">
@@ -42,13 +42,13 @@
     </nav>
 </header>
 <section id="Home">
-	<h2 class="h2sec">Vision</h2>
-
+	<h2 class="h2sec hidden_right">Vision</h2>
+    <div id="vision" class="hidden"></div>
 
 </section>
 <section id="About">
-	<h2 class="h2sec"> About Us</h2>
-	<div> 
+	<h2 class="h2sec hidden_right"> About Us</h2>
+	    
 </section> 
 
 <!-- <div id="ctn-abt"> A
