--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <img src="SRS.png" id="logo" class="hidden" height="70%"> 
    </a>
 	<nav>
-		<div id="cont1" class="cont" >
+		<div id="cont1" class="cont"  onclick="window.location='#Home'">
         <a class="link hidden_top" href="#Home">Home</a>
 		<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 		</div>
 	
-		<div id="cont2" class="cont">
+		<div id="cont2" class="cont" onclick="window.location='#About'">
             <a class="link hidden_top" href="#About">About</a>
 			<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
