--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
     <link rel="stylesheet" type="text/css" href="Styles.css">
     <link rel="icon" type="image/png" href="SRSfavicon.png">
 </head>
-<body>
-	<!-- // <span id="follower"></span>    -->
+<body onmouseleave="hidetrail()" onmouseenter="showtrail()">
+
 
 <header>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
+	<div class="circle"></div>
 
 	<a href="" id="logoanchor">
 <img src="SRS.png" id="logo" class="hidden" height="70%"> 
    </a>
-	<nav>
+	<nav id="mainnav">
 		<div id="cont1" class="cont"  onclick="window.location='#Home'">
         <a class="link hidden_top" href="#Home">Home</a>
 		<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
@@ -28,7 +38,7 @@
 			
 		</div>
 	    <div id="cont3" class="cont">
-	    	<a class="link hidden_top" href="">Designs</a>
+	    	<a class="link hidden_top" href="SRS/btdesigns.html" onclick="window.location.href='btdesigns.html'"target="blank">Designs</a>
 	    	<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
 			</img>
 	    </div>
@@ -104,8 +114,8 @@
 	   
 	   <span class="para type">Understanding that each project has unique requirements, we prioritize open communication and collaboration with our clients. We listen attentively to your needs, turning your vision into a tangible reality. With a meticulous attention to detail and an unwavering commitment to quality, we ensure that every aspect of your project is handled with the utmost care and precision.
 	
-	   Choosing SRS Contractors means partnering with a company that merges tradition with modernity, craftsmanship with innovation, and professionalism with passion. We are dedicated to exceeding your expectations, providing exceptional results that stand the test of time.</span>
-	   <a href="" class="para type">Contact us</a><span class="para type"> today to embark on an extraordinary construction journey with SRS Contractors. Let us elevate your project to new heights of excellence.</span>
+	   Choosing SRS Contractors means partnering with a company that merges tradition with modernity, craftsmanship with innovation, and professionalism with passion. We are dedicated to exceeding your expectations, providing exceptional results that stand the test of time.
+	   Contact us today to embark on an extraordinary construction journey with SRS Contractors. Let us elevate your project to new heights of excellence.</span>
 	   
   </div>
   </section>
