--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onmouseleave="hidetrail()" onmouseenter="showtrail()">
 <div class="sidebar hidden_top">
 	<a class="sidebarlink" href="#mainnav"><img src="Home Icon 1.png" class="navicon" height="100%" width="100%"></a>
-	<a class="sidebarlink" href=""><img src="design icon.png" class="navicon" height="100%" width="105%"></a>   
+	<a class="sidebarlink" href="DesignNav.html"><img src="design icon.png" class="navicon" height="100%" width="105%"></a>   
    <a class="sidebarlink" href="Contact.html"><img src="phone_icon.png" class="navicon" height="100%" width="100%"></a>
    <a href=""></a>
    </div>
