--- a/btdesigns.html
+++ b/btdesigns.html
@@ -53,14 +53,14 @@ height: 100vh;
   border-top: 5px;
   border-bottom: 5px;
   border-left: 5px;
-  border-color: gray;
+  border-color: black;
   	border-radius: 2px;
-	border-style: inset;
+	border-style: solid;
 /*	border-top: 10px; 
 	border-bottom: 10px;
 	border-left: 0px; 
 	padding: 4px; */	
-  left: -5%;
+  left: -4.9%;
 	z-index: 4;
 	display: inline-block;
 	box-sizing: border-box;
@@ -73,9 +73,7 @@ opacity: 1;
 left: 0%;
 
 }
-.hidenavbar{
-	
-}
+
 </style>
 <link rel="stylesheet" type="text/css" href="Styles.css">
 <link rel="icon" type="image/png" href="SRSfavicon.png">
@@ -87,6 +85,7 @@ left: 0%;
 	<a class="sidebarlink" href="DesignNav.html"><img src="design icon.png" class="navicon" height="100%" width="105%"></a>   
    <a class="sidebarlink" href="Contact.html"><img src="phone_icon.png" class="navicon" height="100%" width="100%"></a>
    <a href=""></a>
+    <img id="indicator" src="right arrow.png" height="100%" width="300%">
    </div>
 	<div class="circle"></div>
 	<div class="circle"></div>
@@ -100,9 +99,9 @@ left: 0%;
 	<div class="circle"></div>
 	
 <section id="sec1" class="snap">
-	<div id="logoanchor">
-<img src="SRS.png" id="logo" height="90%"><img src=""><img src="phone_icon2.png" id="contacticon"><span class="home_text"> Shravan Swami<br>Contact Us<br>9867742312</span>
-   </div>
+	<header id="logoanchor">
+<a href="index.html"><img src="SRS.png" id="logo" height="90%"></a><img src=""><img src="phone_icon2.png" id="contacticon"><span class="home_text"> Shravan Swami<br>Contact Us<br>9867742312</span>
+   </header>
 <img src="/bt/Bt01.jpeg" alt="" id="image1" class="image hidden_top">
 <img src="/bt/Bt02.jpeg" alt="" id="image2" class="image hidden_top">
 <img src="/bt/Bt03.jpeg" alt="" id="image3" class="image hidden_top">
