--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<a class="sidebarlink" href="DesignNav.html"><img src="design icon.png" class="navicon" height="100%" width="105%"></a>   
    <a class="sidebarlink" href="Contact.html"><img src="phone_icon.png" class="navicon" height="100%" width="100%"></a>
    <a href=""></a>
+   <img id="indicator" src="right arrow.png" height="100%" width="300%">
    </div>
 <header id="header">
 
@@ -39,18 +40,18 @@
 		<div id="cont2" class="cont" onclick="window.location='#About'">
             <a class="link hidden_top" href="#About">About</a>
 			<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
-			</img>
+			
 			
 		</div>
 	    <div id="cont3" class="cont" onclick="window.location.href='DesignNav.html'">
 	    	<a class="link hidden_top" href="DesignNav.html" onclick="window.location.href='DesignNav.html'">Designs</a>
 	    	<img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
-			</img>
+			
 	    </div>
 		<div id="cont4" class="cont">
 			<a class="link hidden_top"  href="" >Contact</a>
 		   <img src="Window_closed1.png" height="65%" width="100%" class="window" onmouseover="this.src='Window open 1.png'" onmouseout="this.src='Window_closed1.png'">
-			</img>
+			
 		</div>
 		
 	
