--- a/DesignNav.html
+++ b/DesignNav.html
@@ -124,13 +124,13 @@ background-image: linear-gradient(315deg, #f8ceec 0%, #a88beb 74%);
    <button class="prevbutton" onclick="handleBackwardButtonClick()"></button>
    <div class="slide active navoption" onclick="window.location.href='btdesigns.html'">
    	<div class="box">
-   		<img src="bt\bt03.jpeg" class="optionimg">
+   		<img src="/bt/bt03.jpeg" class="optionimg">
    		<span class="link navtxt">Bathroom Designs</span>
    	</div>
    </div>
    <div class="slide next navoption">
    	<div class="box">
-   		<img src="Ceiling\Ceiling 1.jpeg" class="optionimg">
+   		<img src="/Ceiling/Ceiling 1.jpeg" class="optionimg">
    		<span class="link navtxt">Ceiling designs</span>
    	</div>
    	</div>
